fixed header for contact page for center align

--- a/templeinn/css/large.css
+++ b/templeinn/css/large.css
@@ -1,146 +1,152 @@
-@media (min-width:60em) {
-    #hamburgerBtn span:nth-child(1) {display:none;}
-    #hamburgerBtn span:nth-child(2) {display:none;}
-    
-    #hamburgerBtn.open span:nth-child(1) {display:none;}
-    #hamburgerBtn.open span:nth-child(2) {display:none;}   
+@media (min-width: 60em) {
+  #hamburgerBtn span:nth-child(1) {
+    display: none;
+  }
+  #hamburgerBtn span:nth-child(2) {
+    display: none;
+  }
 
-    #hamburgerBtn{
-        display: none;
-    }
-    nav ul{
-        display: block; 
-     }
-    .siteheader{
-        display: grid;
-        grid-template-columns: 25% 25% 50%;
-        grid-template-rows: 66% 33%;
-    }
-    #date{
-        grid-column: 2/3;
-        grid-row: 1/2;
-        background-color: #FFF;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        text-align: center;
-        margin-top: 25px;
-    }
-    .banner{
-        position: relative;
-        top: 25px;
-        padding-bottom: 20px;
-        margin: auto;
-    }
-    #header2{
-        grid-column: 3/4;
-        margin-right: 25px;
-    }
-    #headernav li{
-        display: inline-block;
-    }
-    #headernav a{
-        padding: 25px 20px; 
-    }
-    .headerlogo img{
-        width: 225px;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .templefooter{
-        display: grid;
-        grid-template-columns: 33% 33% 33%;
-        grid-template-rows: 66% 33%;
-    }
-    .footcontact{
-        grid-column: 2/3;
-        grid-row: 1/2;
-        margin-top: 20px;
-    }
-    .footmap{
-        grid-column: 3/4;
-        grid-row: 1/2;
-    }
-    .copyinfo{
-        position: relative;
-        top: 20px;
-        grid-column: 1/4;
-        grid-row: 2/3;    
-        margin: 0 0 0 20px;  
-    }
-    .mapimage img{
-        width: 150px;
-    }
-    .footerlogo img{
-        margin-left: auto;
-    }
-    #contactgrid{
-        display: grid;
-        grid-template-columns: 50% 50%;
-    }
+  #hamburgerBtn.open span:nth-child(1) {
+    display: none;
+  }
+  #hamburgerBtn.open span:nth-child(2) {
+    display: none;
+  }
 
-    #contactinfo{
-        grid-column: 2/3;
-        display: block;
-        top: 0px;
-        height: 50%;
-    }
-    
-    #contactform{
-        grid-column: 1/2;
-    }
-    #inquiry{
-        width: 95%;
-        max-width: 70rem;
-    }
-    
-    form input.submitBtn{
-        margin-bottom: 30px;
-        margin-top: 0;
-    }
-    #contactaddress{
-        margin-top: 70px;
-    }
-    #reservationgrid{
-        display: grid;
-        grid-template-columns: 50% 50%;
-        grid-template-rows: 900px 900px;
-        grid-gap: 5px;    
-    }    
-    #ressaltlake, #resrexburg{
-        display: block;
-        grid-column: 1/2;
-    }
-    #ressaltlake{
-        grid-row: 1/2;
-    }
-    #resrexburg{
-        grid-row: 2/3; 
-    }
-    #ressaltlake img{
-        width: 95%;
-        margin-top: 40px;
-        margin-left: 25px;
-        border-radius: 12px;
-    }
-    #resrexburg img{
-        width: 95%;
-        border-radius: 12px;
-        margin-left: 25px;
-        margin-top: 40px;
-    }
+  #hamburgerBtn {
+    display: none;
+  }
+  nav ul {
+    display: block;
+  }
+  .siteheader {
+    display: grid;
+    grid-template-columns: 25% 25% 50%;
+    grid-template-rows: 66% 33%;
+  }
+  #date {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    background-color: #fff;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    margin-top: 25px;
+  }
+  .banner {
+    position: relative;
+    top: 25px;
+    padding-bottom: 20px;
+    margin: auto;
+  }
+  #header2 {
+    grid-column: 3/4;
+    margin-right: 25px;
+  }
+  #headernav li {
+    display: inline-block;
+  }
+  #headernav a {
+    padding: 25px 20px;
+  }
+  .headerlogo img {
+    width: 225px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .templefooter {
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    grid-template-rows: 66% 33%;
+  }
+  .footcontact {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 20px;
+  }
+  .footmap {
+    grid-column: 3/4;
+    grid-row: 1/2;
+  }
+  .copyinfo {
+    position: relative;
+    top: 20px;
+    grid-column: 1/4;
+    grid-row: 2/3;
+    margin: 0 0 0 20px;
+  }
+  .mapimage img {
+    width: 150px;
+  }
+  .footerlogo img {
+    margin-left: auto;
+  }
+  #contactgrid {
+    display: grid;
+    grid-template-columns: 50% 50%;
+  }
 
-    #reservationform{
-        grid-column: 2/3;
-        grid-row: 1/3;
-        width: 95%;
-        display: block;
-        margin-left: auto;
-        margin-right: 30px;
-        padding-right: 0;
-    }
+  #contactinfo {
+    grid-column: 2/3;
+    display: block;
+    top: 0px;
+    height: 50%;
+  }
 
+  #contactform {
+    grid-column: 1/2;
+  }
+  #inquiry {
+    width: 95%;
+    max-width: 70rem;
+  }
 
+  form input.submitBtn {
+    margin-bottom: 30px;
+    margin-top: 0;
+  }
+  #contactaddress {
+    margin-top: 70px;
+  }
+  #reservationgrid {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 900px 900px;
+    grid-gap: 5px;
+  }
+  #ressaltlake,
+  #resrexburg {
+    display: block;
+    grid-column: 1/2;
+  }
+  #ressaltlake {
+    grid-row: 1/2;
+  }
+  #resrexburg {
+    grid-row: 2/3;
+  }
+  #ressaltlake img {
+    width: 95%;
+    margin-top: 40px;
+    margin-left: 25px;
+    border-radius: 12px;
+  }
+  #resrexburg img {
+    width: 95%;
+    border-radius: 12px;
+    margin-left: 25px;
+    margin-top: 40px;
+  }
 
+  #reservationform {
+    grid-column: 2/3;
+    grid-row: 1/3;
+    width: 95%;
+    display: block;
+    margin-left: auto;
+    margin-right: 30px;
+    padding-right: 0;
+  }
 }
